--- a/CodeBusters/src/client/src/pages/style/Leaderboard.css
+++ b/CodeBusters/src/client/src/pages/style/Leaderboard.css
@@ -90,7 +90,7 @@
 
 .leaderboard-table th {
     padding: 1rem;
-    text-align: left;
+    text-align: center;
     font-weight: 600;
     font-size: 0.95rem;
     text-transform: uppercase;
@@ -137,7 +137,8 @@
 .name-col {
     flex: 1;
     font-weight: 500;
-    color: #2c3e50;
+    color: white;
+    text-align: center;
 }
 
 /* Trips Column */
@@ -145,7 +146,7 @@
     width: 100px;
     text-align: center;
     font-weight: 600;
-    color: #27ae60;
+    color: white;
 }
 
 .leaderboard-table tbody tr.top-1 .trips-col {
